fix: again align issue fixed

--- a/zenctuary-theme-starter/blocks/zen-memberships/style.scss
+++ b/zenctuary-theme-starter/blocks/zen-memberships/style.scss
@@ -21,6 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .zen-memberships-tabs-row {
